--- a/cusub/css/styles.css
+++ b/cusub/css/styles.css
@@ -1,18 +1,29 @@
 body {
-background-color: #1fe1d9; /* light-green */
+background-color: #ddefd2; /* light-green */
+font-family: 'Raleway', sans-serif;
 color: #333;
 font-size: 16px;
 }
 
+header #madax.navbar {
+	background: #ddefd2; !important;
+	color: #bebebe;
+}
+
+.navbar-brand {
+	text-transform: uppercase;
+	color: #fff;
+}
 h1,
 h2 {
     font-family: 'Raleway', Arial, sans-serif;
     font-weight: 800;
 }
 
-.jumbotron, jambo {
+.jumbotron, #jambo {
 background-color: #ffe1bf;  /* light-orange */
 margin-top: 15px;
+padding: 15px 10px 100px;
 } 
 
 .jumbotron img {
@@ -25,6 +36,10 @@ border: 2px solid #999;
 font-size: 1.3em;
 }
 
+.dhexdhexaad {
+padding: 0 20px 20px;
+}
+
 h1.ejwan, h2, h4 {
 text-align: center;
 margin-top: 15px;
@@ -34,7 +49,7 @@ color: #333;
 }
 
 h1.ejwan {
-margin: 0 0 30px;
+margin: 20px 0 30px;
 }
 
 a:hover, a:visited {
@@ -45,9 +60,9 @@ text-decoration: none;
 
 .container-fluid.three-sections {
 background-color: #ddefd2;
-color: #000;
+color: #333;
 width: 100%;
-padding: 20px;
+padding: 60px 20px 30px;
 margin-top: 30px;
 }
 
@@ -65,6 +80,16 @@ border: 1px solid #000;
 margin-top: 40px;
 }
 
+/* footer */
+
+.dabo {
+	background: #333;
+	font-size: .8em;
+}
+
+.dabo a:hover, .dabo a:focus {
+	color: #000;
+}
 
 /* Extra small (xs) devices (portrait phones, less than 576px) */
 
@@ -82,20 +107,35 @@ text-align: center;
 /* Small (sm) devices (landscape phones, 576px and up) */
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+#jambo .sawir {
+background: url('../images/jambo/500.jpg') no-repeat;
+height: 332px;
+
+border-radius: 7px;
+margin-bottom: 40px;
+border: 2px solid #999;
+
+}
+
 
      }
 
 
 /* Medium (md) devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
-.sawir {
-background: url('Images/jambo/768.jpg') no-repeat;
-hieght: 432px;
+#jambo .sawir {
+background: url('../images/jambo/768.jpg') no-repeat;
+height: 432px;
+border-radius: 7px;
+margin-bottom: 40px;
+border: 2px solid #999;
+}
+
 
 .dhexdhexaad > p {
 text-align: center;
 width: 65%;
-margin: 0 auto 0;
+margin: 20px auto 20px;
 }
 
      }
@@ -104,9 +144,13 @@ margin: 0 auto 0;
 /* Large (lg) devices  (desktops, 992px and up) */
 
 @media (min-width: 992px) and (max-width: 1199.98px) {
-.jambo .sawir {
-background: url(Images/jambo/661.jpg) no-repeat;
-hieght: 372px;
+
+#jambo .sawir {
+background: url('../images/jambo/768.jpg') no-repeat;
+height: 372px;
+border-radius: 7px;
+margin-bottom: 40px;
+border: 2px solid #999;
 }
 
      }
@@ -115,8 +159,12 @@ hieght: 372px;
 /* Extra large (xl) devices (large desktops, 1200px and up) */
 
 @media (min-width: 1200px) {
-.jambo .sawir {
-background: url('./Images/jambo/800.jpg') no-repeat;
-hieght: 450px;
+#jambo .sawir {
+background: url('../images/jambo/800.jpg') no-repeat;
+height: 450px;
+border-radius: 7px;
+margin-bottom: 40px;
+border: 2px solid #999;
+}
 
      }
